--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,7 +171,7 @@ jobs:
                   poetry publish -r testpypi
 
     github_release:
-        needs: [tag]
+        needs: [tag_and_publish]
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repo
