--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: publish and release
 on:
     push:
         branches:
@@ -12,52 +12,53 @@ jobs:
             fail-fast: false
 
         steps:
-            - name: Checkout repo
+            - name: checkout repo
               uses: actions/checkout@v2
 
-            - name: Set up Python
+            - name: set up python
               uses: actions/setup-python@v2
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: Set up Node
+            - name: set up node
               uses: actions/setup-node@v2
               with:
                   node-version: '12'
-            - name: Install Poetry
+
+            - name: install poetry
               uses: snok/install-poetry@v1.1.1
               with:
                   version: 1.1.4
                   virtualenvs-create: true
                   virtualenvs-in-project: true
 
-            - name: Load cached venv
+            - name: load cached venv
               id: cached-poetry-dependencies
               uses: actions/cache@v2
               with:
                   path: .venv
                   key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
-            - name: Install Poetry dependencies
+            - name: install poetry dependencies
               run: poetry install
               if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
-            - name: Load cached npm
+            - name: load cached npm
               id: cached-npm-dependencies
               uses: actions/cache@v2
               with:
                   path: ~/.npm
                   key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
-            - name: Install pyright dependencies
+            - name: install pyright dependencies
               run: sudo npm install -g pyright
 
-            - name: Lint
+            - name: lint
               run: |
                   source ./.venv/bin/activate
                   poe typing
                   poe lint
-                  poe sort-imports
+                  poe sort-imports -c -v
 
     test:
         runs-on: ubuntu-latest
@@ -67,33 +68,33 @@ jobs:
             fail-fast: false
 
         steps:
-            - name: Check out repo
+            - name: check out repo
               uses: actions/checkout@v2
 
-            - name: Set up Python
+            - name: set up python
               uses: actions/setup-python@v2
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: Install Poetry action
+            - name: install poetry action
               uses: snok/install-poetry@v1.1.1
               with:
                   version: 1.1.4
                   virtualenvs-create: true
                   virtualenvs-in-project: true
 
-            - name: Load cached venv
+            - name: load cached venv
               id: cached-poetry-dependencies
               uses: actions/cache@v2
               with:
                   path: .venv
                   key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
-            - name: Install Poetry dependencies
+            - name: install poetry dependencies
               run: poetry install
               if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
-            - name: Test it
+            - name: test it
               run: |
                   source ./.venv/bin/activate
                   poe test-coverage -vv
@@ -103,68 +104,68 @@ jobs:
         needs: [lint, test]
         runs-on: ubuntu-latest
         steps:
-            - name: Check out repo
+            - name: checkout repo
               uses: actions/checkout@v2
 
-            - name: Set up Python
+            - name: set up python
               uses: actions/setup-python@v2
               with:
                   python-version: 3.9
 
-            - name: Install Poetry
+            - name: install poetry
               uses: snok/install-poetry@v1.1.1
               with:
                   version: 1.1.4
                   virtualenvs-create: true
                   virtualenvs-in-project: true
 
-            - name: Load cached venv
+            - name: load cached venv
               id: cached-poetry-dependencies
               uses: actions/cache@v2
               with:
                   path: .venv
                   key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
-            - name: Install Poetry dependencies
+            - name: install poetry dependencies
               run: poetry install
               if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
-            - name: Maybe bump major
+            - name: maybe bump major
               if: startsWith(github.event.head_commit.message, 'breaking:')
               run: |
                   poetry version major
                   echo "isMajor=1" >> $GITHUB_ENV
 
-            - name: Maybe bump patch
+            - name: maybe bump patch
               if: ${{ startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:') }}
               run: |
                   poetry version patch
                   echo "isPatch=1" >> $GITHUB_ENV
 
-            - name: Maybe bump minor
+            - name: maybe bump minor
               if: ${{ !env.isMajor && !env.isPatch }}
               run: |
                   poetry version minor
 
-            - name: Poetry publish
+            - name: poetry publish
               run: |
                   poetry build
                   poetry config pypi-token.testpypi ${{ secrets.PYPI_TEST_TOKEN }}
                   poetry publish -r testpypi
 
-            - name: Get version number
+            - name: get version number
               run: |
                   VERSION=$(poetry version)
                   VERSION=v${VERSION#"us-data "}
                   echo "version=$VERSION" >> $GITHUB_ENV
 
-            - name: Commit to master
+            - name: commit to master
               uses: EndBug/add-and-commit@v6
               with:
                   message: bump ${{ env.version }}
                   tag: ${{ env.version }}
 
-            - name: Store version
+            - name: store version
               uses: nick-invision/persist-action-data@v1
               with:
                   data: ${{ env.version }}
@@ -174,16 +175,16 @@ jobs:
         needs: [tag_and_publish]
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout repo
+            - name: checkout repo
               uses: actions/checkout@v2
 
-            - name: Get version
+            - name: get version
               id: version_num
               uses: nick-invision/persist-action-data@v1
               with:
                   retrieve_variables: TAGGED_VERSION
 
-            - name: Create release
+            - name: create release
               id: create_release
               uses: actions/create-release@v1
               env:
