--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: ci
 
 on:
     push:
+        branches-ignore:
+            - main
     pull_request:
         branches-ignore:
             - main
