--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -57,6 +57,7 @@ jobs:
               run: |
                   source ./.venv/bin/activate
                   poe typing
+                  echo $(ls)
                   poe lint
                   poe sort-imports -c
 
