--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,6 +163,7 @@ jobs:
             - name: commit to master
               uses: EndBug/add-and-commit@v6
               with:
+                  branch: origin main --force
                   message: bump ${{ env.version }}
                   tag: ${{ env.version }}
 
