--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,6 +102,7 @@ jobs:
 
     tag_and_publish:
         needs: [lint, test]
+        if: ${{ !startsWith(github.event.head_commit.message, 'skip') }}
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
@@ -174,6 +175,7 @@ jobs:
 
     github_release:
         needs: [tag_and_publish]
+        if: ${{ !startsWith(github.event.head_commit.message, 'skip') }}
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
