--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -8,7 +8,7 @@ jobs:
     enforce-label:
         runs-on: ubuntu-latest
         steps:
-            - uses: yogevbd/enforce-label-action@2.1.0
-              with:
-                  REQUIRED_LABELS_ANY: 'major,minor,patch,other'
-                  REQUIRED_LABELS_ANY_DESCRIPTION: "Select at least one label ['major','minor','patch','other']"
+            - name: require label
+              if: ${{ !contains(github.event.label.name, 'major') || !contains(github.event.label.name, 'minor') || !contains(github.event.label.name, 'patch') || !contains(github.event.label.name, 'other')}}
+              run: echo Need a label ['major', 'minor', 'patch', 'other']
+                  exit 1
