--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,35 +147,35 @@ jobs:
                   poetry version patch
 
             - name: poetry publish
-              if: github.event.label != 'other'
+              if: github.event.label.name != 'other'
               run: |
                   poetry build
                   poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
                   poetry publish
 
             - name: get version number
-              if: github.event.label != 'other'
+              if: github.event.label.name != 'other'
               run: |
                   VERSION=$(poetry version)
                   VERSION=v${VERSION#"us-data "}
                   echo "version=$VERSION" >> $GITHUB_ENV
 
             - name: make changelog
-              if: github.event.label != 'other'
+              if: github.event.label.name != 'other'
               uses: vemel/update-changelog@0.0.1
               id: changelog
               with:
                   version: ${{ env.version }}
 
             - name: commit to master
-              if: github.event.label != 'other'
+              if: github.event.label.name != 'other'
               uses: EndBug/add-and-commit@v6
               with:
                   message: bump ${{ env.version }}
                   tag: ${{ env.version }}
 
             - name: store version
-              if: github.event.label != 'other'
+              if: github.event.label.name != 'other'
               uses: nick-invision/persist-action-data@v1
               with:
                   data: ${{ env.version }}
@@ -183,7 +183,7 @@ jobs:
 
     github_release:
         needs: [tag_and_publish]
-        if: ${{ !startsWith(github.event.head_commit.message, 'skip') && github.event.label != 'other' }}
+        if: ${{ !startsWith(github.event.head_commit.message, 'skip') && github.event.label.name != 'other' }}
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
