--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -10,5 +10,6 @@ jobs:
         steps:
             - name: require label
               if: ${{ !contains(github.event.label.name, 'major') || !contains(github.event.label.name, 'minor') || !contains(github.event.label.name, 'patch') || !contains(github.event.label.name, 'other')}}
-              run: echo Need a label ['major', 'minor', 'patch', 'other']
+              run: |
+                  echo Need a label ['major', 'minor', 'patch', 'other']
                   exit 1
