--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -11,5 +11,6 @@ jobs:
             - name: require label
               if: ${{ !contains(github.event.label.name, 'major') || !contains(github.event.label.name, 'minor') || !contains(github.event.label.name, 'patch') || !contains(github.event.label.name, 'other')}}
               run: |
+                  echo ${{ github.event.label.name }}
                   echo Need a label ['major', 'minor', 'patch', 'other']
                   exit 1
