--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -15,4 +15,4 @@ jobs:
                   echo Need a label ['major', 'minor', 'patch', 'other']
                   exit 1
               env:
-                  LABEL: ${{ toJson(github.event.labels.*.name) }}
+                  LABEL: ${{ toJson(github.event.labels.*) }}
